--- a/web-ui/templates/index.html
+++ b/web-ui/templates/index.html
@@ -2,33 +2,41 @@
 <html>
 <head>
     <title>Card Game</title>
-    <style>
-        /* Your CSS styles can go here */
-        body{
-            background-color: aliceblue;
-        }
+<script src="web-ui\templates\js\index.js"> </script>
 
-        .boardFather{
-            display: flex;
-            width: 50vw;
-            height: 50vh;
-            margin-top: 3vh;
-            margin-left: 3vw;
-        }
-
-        .playerChild{
-            width: auto;
-            height: auto;
-
-        }
-    </style>
 </head>
 <body>
+    <div id="p1">
     <h1>Card Game</h1>
     <button id="startGameBtn">Start Game</button>
     <div id="gameState"></div>
     <button id="makeMoveBtn">Make Move</button>
+    </div>
+    <div id="p2">
+        <h1>Card Game</h1>
+        <button id="startGameBtn">Start Game</button>
+        <div id="gameState"></div>
+        <button id="makeMoveBtn">Make Move</button>
+    </div>
     
-    <script src="js/index.js"> </script>
+    <div id="p3">
+        <h1>Card Game</h1>
+        <button id="startGameBtn">Start Game</button>
+        <div id="gameState"></div>
+        <button id="makeMoveBtn">Make Move</button>
+    </div>
+    <div id="p4">
+            <h1>Card Game</h1>
+            <button id="startGameBtn">Start Game</button>
+            <div id="gameState"></div>
+            <button id="makeMoveBtn">Make Move</button>
+    </div>
+
+        <div id="p5">
+            <h1>Card Game</h1>
+            <button id="startGameBtn">Start Game</button>
+            <div id="gameState"></div>
+            <button id="makeMoveBtn">Make Move</button>
+        </div>
 </body>
 </html>
