--- a/web-ui/templates/index.html
+++ b/web-ui/templates/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
     <title>Card Game</title>
-<script src="web-ui\templates\js\index.js"> </script>
-
+<script src="{{ url_for('static', filename='index.js') }}"> </script>
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='index.css') }}">
 </head>
 <body>
     <div id="p1">
