--- a/web_ui/templates/index.html
+++ b/web_ui/templates/index.html
@@ -25,6 +25,6 @@
         <h1>p5</h1>
     </div>
 </div>
- <button type="button" onclick="game_loop()">Start</button>
+ <button type="button" onclick="getGameState()">Start</button>
 </body>
 </html>
