--- a/web_ui/templates/index.html
+++ b/web_ui/templates/index.html
@@ -12,25 +12,47 @@
     <link rel="manifest" href="{{ url_for('static', filename='site.webmanifest') }}">
 </head>
 <body>
-</head>
-<body>
- <div id="parent">
+<span>
+    <h1>Runda:</h1><h1 id="round">0</h1>
+</span>
+<div id="parent">
     <div id="1">
         <h1>p1</h1>
+        <div>
+            <p>Hand:</p>
+            <p id="hand1"></p>
+        </div>
     </div>
     <div id="2">
         <h1>p2</h1>
+        <div>
+            <p>Hand:</p>
+            <p id="hand2"></p>
+        </div>
     </div>
     <div id="3">
         <h1>p3</h1>
+        <div>
+            <p>Hand:</p>
+            <p id="hand3"></p>
+        </div>
     </div>
     <div id="4">
         <h1>p4</h1>
+        <div>
+            <p>Hand:</p>
+            <p id="hand4"></p>
+        </div>
     </div>
     <div id="5">
         <h1>p5</h1>
+        <div>
+            <p>Hand:</p>
+            <p id="hand5"></p>
+        </div>
     </div>
 </div>
+
  <button type="button" onclick="getGameState()">Start</button>
 </body>
 </html>
